# G85_Contacts_API

./: .env  Cargo.toml  README.md  diesel.toml
contacts_gtk/: .gitignore  README.md  compile.sh  makefile
contacts_gtk/header/: add_contact_window.h  http_api.h  main.h  show_all_contacts_window.h  update_contact_window.h
contacts_gtk/src/: add_contact_window.c  http_api.c  main.c  show_all_contacts_window.c  update_contact_window.c
docker/: docker-compose.yml
migrations/2024-06-21-145412_g85_contacts/: up.sql
migrations/2024-06-22-202519_g85-contacts/: down.sql  up.sql
migrations/2025-02-22-213533_g85_contacts/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: api_end_points.rs  db.rs  mod.rs
src/controller/: contact_controller.rs  mod.rs  user_controller.rs
src/models/: contact.rs  user.rs
src/service/: contact_service.rs  mod.rs  user_service.rs
src/utils/: functions.rs
