[package]
name = "g85_contacts_web_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.2.0", features = ["postgres","r2d2", "chrono"] }
dotenvy = "0.15"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
uuid = "1.8.0"

actix-web-httpauth = "0.8.0"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
chrono = { version = "0.4.22", features = ["serde"] }